# ZASCASR

./: AGENTS.md  CMakeLists.txt  README.md  main.cpp  resource.rc  uv.toml  zasca-guard.manifest
.github/workflows/: build-windows-service.yml
resources/: resource.rc  uv-installer.ps1
src/: config.h  http_client.cpp  http_client.h  initializer.cpp  initializer.h  json_parser.cpp  json_parser.h  logger.cpp  logger.h  main.cpp  process.cpp  process.h  resource.h  security.cpp  security.h  updater.cpp  updater.h  utils.cpp  utils.h  uv_installer.cpp  uv_installer.h  win_service.cpp  win_service.h
